  - additional under-relaxation has been added (based on residual decrease)
  to improve convergence rate.
  - seepage option is now independant from fixedPotentialList and is activated
  in transportProperties as:
     seepage yes;

### Utilities

- setBoundaryHeadPressure

  - add uniform potential option for 2D solvers (potential field)

### Libraries

- numericalMethods

  - new Jacobian Matrix class for handling FD Newton algorithm (finite
  difference method, for debugging only)

### Bug fixes

- solved ambiguous calls for compatibility with CLANG and OSX
- fix dimensions in ToddNo.H
- fix interpolation functions for event value computation
- 3rd time derivative computed on potential (instead of hwater) to avoid
instabilities when hwater tends to 0
- fix retard coefficient for unsaturated (depends on saturation flow)
- fix flow/balance computation in 2D solvers
- handle correctly dry cells for stationaryGroundwater2DFoam solver

************************
*** PMFv1912
*** Multi-species transport and timestep management
************************

### Solvers

- Global:

  -patchEvent are now automatically read by solvers inside fields file
  -keyword "eventTimeTracking" is used to constraint the solver to
  explictly compute solution at event time (source/patch events)

- groundwaterFoam

  - The non-convergence of the Picard's algorithm now forces the solver to
  recompute the time iteration reducing the time step
  - add specific storage term (Ss) to the Richards' formulation
  - adding by default the mass-conservative terms to head pressure equation
  (mixed-formulation). The old head-pressure formulation can be now obtained
  adding "massConservative false;" in transportProperties

- groundwater2DFoam

  - solver adapted to handle uniform or non-uniform infiltration event (also
  accept non-conformal mesh event => consider as uniform infiltration)
  - time-stepping is now based on the truncation error (see the notes for
  porousScalarTransportFoam)
